--- a/package.json
+++ b/package.json
@@ -22,11 +22,7 @@
     "url": "https://github.com/troggy/copay-bitrefill/issues"
   },
   "homepage": "https://github.com/troggy/copay-bitrefill#readme",
-  "dependencies": {
-    "bitrefill": "troggy/bitrefill_nodejs#custom-request",
-    "body-parser": "^1.14.2",
-    "express": "^4.13.3"
-  },
+  "dependencies": {},
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-browserify": "^4.0.1",
