--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Angular module to add Bitrefill support to Copay wallet",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "proxy": "node proxy.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -25,7 +24,6 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-browserify": "^4.0.1",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-copy": "^0.8.2",
